--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -10,9 +10,9 @@ on:
     - cron: 15 12 * * 1
 
 jobs:
-  newspush:
+  autocard:
     runs-on: ubuntu-latest
-    steps :
+    steps:
       - name: checkout
         uses: actions/checkout@v3
 
@@ -27,7 +27,7 @@ jobs:
           pip install requests 
           pip install dingtalkchatbot 
       
-      - name: send
+      - name: auto-card
         env:
           OPENID: ${{ secrets.OPENID }}
           DING_WEBHOOK: ${{ secrets.DING_WEBHOOK }}
